reviewing for loops

--- a/objects-mini-exercises.html
+++ b/objects-mini-exercises.html
@@ -42,14 +42,15 @@ console.log(beverages[0].brandName.split("").reverse().join(""));
 console.log("Define your objects using both literal syntax to create" +
 		" all properties and values at once and also try defining empty objects and " +
 		"assign property values in separate statements using the dot notation.");
-function idk(){
-	for (var i = 0; i < beverageName.length; i++) {
-	// Object.entries(beverages);
-	var allString = JSON.stringify(Object.entries(beverages));
-	return allString;
-	}
-}
-console.log(idk());
+
+// function idk(){
+// 	for (var i = 0; i < beverageName.length; i++) {
+// 	// Object.entries(beverages);
+// 	var allString = JSON.stringify(Object.entries(beverages));
+// 	return allString;
+// 	}
+// }
+// console.log(idk());
 
 
 //
