--- a/js-warmups.html
+++ b/js-warmups.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 <script src="js/js-warmups.js"></script>
+<script>
+	
+	//make the browser ask a question and return the message based on the answer.
+	
+	
+	function amIcoding(answer){
+		var coding = "yes"
+		if (answer !== coding || answer === true) return "I'm not learning ):";
+		else return "I'm learning.";
+	}
+	
+</script>
 </body>
 </html>
