--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -13,7 +13,9 @@
 	<li>listitem</li>
 	<li class="codeup">listitem</li>
 </ul>
-
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis dolorem, ducimus eveniet incidunt
+	inventore maxime pariatur quis quod quos reiciendis tempore totam unde! Adipisci assumenda ipsam nobis quisquam
+	soluta?Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto cum enim facilis labore laborum optio placeat quas quis tenetur? Accusamus autem est id ipsum quaerat ratione sit voluptas voluptatum.</p>
 
 <ul>
 	<li class="codeup">listitem2</li>
@@ -27,7 +29,11 @@
 <script>
 	"use strict";
 	$(document).ready(function(){
-		$('.codeup').css('border', 'solid 1px red')
+		$('li').css('font-size', '20px')
+		$('li, h1, p').css('background-color', 'red')
+		$('h1').on('click', function(){
+			$('h1').css("background-color", 'blue')
+		});
 	})
 </script>
 </body>
