JQuery alert function testing

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -32,6 +32,7 @@
 		$('li').css('font-size', '20px')
 		$('li, h1, p').css('background-color', 'red')
 		$('h1').on('click', function(){
+			alert('you clicked me! I will now turn blue')
 			$('h1').css("background-color", 'blue')
 		});
 	})
