javascript object practice before review

--- a/js-warmups.html
+++ b/js-warmups.html
@@ -201,6 +201,23 @@
 	//
 	// computeOperations(operations3, 10) // returns 0
 	//
+	// var Operations = [
+	// 		{
+	// 		operation: ["subtract", "multiply", "add"],
+	// 		integer: [7, 3, 5, -2, 10]
+	// 		}
+	// ];
+	// // --- is this possible?^
+	function computeOperations(operations, integers) {
+		for (var i = 0; i < integers.length; i += 1){
+		
+		}
+		if (operations === "add"){
+		}
+		else if (operations === "multiply"){}
+		else if(operations === "subtract"){}
+	}
+	
 </script>
 </body>
 </html>
