Moving code back into the function

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -55,12 +55,11 @@
 			$('#container1').text('I\'m the finished exercise');
 		};
 		function fontSizeChange2(){
-		
-		};
 			$('#container1').css('font-size', '1em');
 			$('#container1').css('background-color', 'red');
 			$('#container1').text('Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis dolorem, ducimus eveniet incidunt inventore maxime pariatur quis quod quos reiciendis tempore totam unde! Adipisci assumenda ipsam nobis quisquam soluta?Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto cum enim facilis labore laborum optio placeat quas quis tenetur? Accusamus autem est id ipsum quaerat ratione sit voluptas voluptatum.');
 		
+		};
 		function hoverRed(){
 			$('li:first-of-type').css('color', 'red');
 		};
@@ -72,12 +71,12 @@
 		$('#container1').click(fontSizeChange2);
 		$('#container1').dblclick(fontSizeChange);
 		
-		function circleSquare(){
-			$('.circle1').css('border-radius', '100px');
-			$('.circle1').css('color:hover', 'red');
-		}
-		$(".circle1").css('background-color', 'pink');
-		$('.circle1').hover(circleSquare);
+	// 	function circleSquare(){
+	// 		$('.circle1').css('border-radius', '100px');
+	// 		$('.circle1').css('color:hover', 'red');
+	// 	}
+	// 	$(".circle1").css('background-color', 'pink');
+	// 	$('.circle1').hover(circleSquare);
 	});
 </script>
 </body>
