addClass and removeClass, mini-exercise-1

--- a/JQueryIdea.html
+++ b/JQueryIdea.html
@@ -6,5 +6,19 @@
 </head>
 <body>
 
+<ul>
+	<li>navitems</li>
+	<li>navitems</li>
+	<li>navitems</li>
+	<li>navitems</li>
+	<li>navitems</li>
+</ul>
+
+
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script>
+	// idea here
+	
+</script>
 </body>
 </html>
