--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -131,8 +131,12 @@
 		$(element).click(function() {
 			$(element)
 					.first()
+					.next()
+					.children()
+					.first()
 					.css('font-weight', 'bold');
 		});
+		
 		});
 		//
 		// $('li').each(function(index, element) {
