testing JQuery event methods

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -141,10 +141,9 @@
 						.next() //eventually came to the realization it was .next(), not .last() method that I needed.
 						.next()
 						.next()
-						.css('background-color', 'white');;
+						.css('background-color', 'white');
 			});
-
-			// thinking of how to toggle this... not sure how
+			// thinking of how to toggle this... not sure how with just jquery
 		// });
 		
 		//2
