--- a/js-warmups.html
+++ b/js-warmups.html
@@ -1,316 +1,339 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>JS Warmups</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<script src="js/js-warmups.js"></script>-->
-<!--<script>-->
-<!--	-->
-<!--	// //make the browser ask a question and return the message based on the answer.-->
-<!--	//-->
-<!--	//-->
-<!--	// function amIcoding(answer){-->
-<!--	// 	var coding = "yes"-->
-<!--	// 	if (answer !== coding || answer === true) return "I'm not learning ):";-->
-<!--	// 	else return "I'm learning.";-->
-<!--	// }-->
-<!--	// ================================= JS WARM UP-->
-<!--	//-->
-<!--	// Consider the following array of users:-->
-<!--	//-->
-<!--			var users = [-->
-<!--				{-->
-<!--					username: 'fsmith',-->
-<!--					email: 'fsmith@email.com',-->
-<!--					numberOfLogins: 23-->
-<!--				},-->
-<!--				{-->
-<!--					username: 'ksmith',-->
-<!--					email: 'ksmith@email.com',-->
-<!--					numberOfLogins: 100-->
-<!--				},-->
-<!--				{-->
-<!--					username: 'lsmith',-->
-<!--					email: 'lsmith@email.com',-->
-<!--					numberOfLogins: 10-->
-<!--				}-->
-<!--			];-->
-<!--	//-->
-<!--	// 1. Create a function, returnFirstUser, that takes in an array of user objects and returns the first user object.-->
-<!--	//-->
-<!--	// function returnFirstUser() {-->
-<!--	// 	for (var i = 0; i < 1; i++) {-->
-<!--	// 		console.log(users[i]); // this is wrong because it doesn not RETURN the first user, it logs.-->
-<!--	// 		console.log("-&#45;&#45;&#45;&#45;");-->
-<!--	// 	}-->
-<!--	// }-->
-<!--	// returnFirstUser();-->
-<!--	// console.log(returnFirstUser());-->
-<!--	//-->
-<!--	// // instructor:-->
-<!--	// // return users[0];-->
-<!--	-->
-<!--	-->
-<!--	// returnFirstUser(users) should return...-->
-<!--	//-->
-<!--	// {-->
-<!--	// 	username: 'fsmith',-->
-<!--	// 			email: 'fsmith@email.com',-->
-<!--	// 		numberOfLogins: 23-->
-<!--	// }-->
-<!--	//-->
-<!--	// 2. Create a function, returnTotalUserLogins, that takes in an array of user objects and returns the total count of logins-->
-<!--	// for all users.-->
-<!--	//when a functions returns nothing it returns undefined.-->
-<!--	// function returnTotalUserLogins(){-->
-<!--	// 	var total = 0; /**it should be out of the forloop**/-->
-<!--	// 	for (var i = 0; i < users.length; i += 1){-->
-<!--	// 		// var total = 0; when i left it in here, it only showed me 10, the last object-->
-<!--	// 		total += users[i].numberOfLogins;-->
-<!--	// 	}-->
-<!--	// 	//users.forEach(function(user){-->
-<!--	// 	// total += user.numberOfLogins;-->
-<!--	// 	// return total; }); -&#45;&#45;foreachloop-->
-<!--	// }-->
-<!--	// console.log(returnTotalUserLogins(users));-->
-<!--	-->
-<!--	// function returnTotalUserLogins(){-->
-<!--	//-->
-<!--	// 	for (var i = 0; i < users.length; i++){-->
-<!--	// 		var sum = 0; /**should be out of the forloop**/-->
-<!--	// 		// console.log(users[i].numberOfLogins);-->
-<!--	// 		var sum =+ parseFloat(users[i].numberOfLogins);-->
-<!--	// 	}-->
-<!--	// 	return sum;-->
-<!--	// }-->
-<!--	-->
-<!--	// console.log(returnTotalUserLogins(users));-->
-<!--	//-->
-<!--	// returnTotalUserLogins(users) should return... 133-->
-<!--	//-->
-<!--	// 3. (optional bonus) create a function, returnMostFrequentUser, that takes in an array of user objects and returns the-->
-<!--	// user object with the highest number of logins.-->
-<!--	// //-->
-<!--	// function returnMostFrequentUser(users) {-->
-<!--	// 	var mostFrequentUser = user {};-->
-<!--	// users.forEach(function (user) {-->
-<!--	// 	if (user.numberOfLogins > mostFrequentUser.numberOfLogins) {-->
-<!--	// 		mostFrequentUser = user;-->
-<!--	// 	}-->
-<!--	// 	});-->
-<!--	// return mostFrequentUser;-->
-<!--	// }-->
-<!--	//review later^^^-->
-<!--	//-->
-<!--	// returnMostFrequentUser(users) should return...-->
-<!--	//-->
-<!--	// {-->
-<!--	// 	username: 'ksmith',-->
-<!--	// 			email: 'ksmith@email.com',-->
-<!--	// 		numberOfLogins: 100-->
-<!--	// }-->
-<!--	-->
-<!--	// ================================= WARM UP-->
-<!--	//-->
-<!--	// Create a function, computeOperations, that takes in an array of operation objects and a starting integer value and returns an integer after all the calculations have completed, using the second integer argument as the first operand. Each operation object will have the following shape:-->
-<!--	//-->
-<!--	// var Operations = [-->
-<!--	// 		{-->
-<!--	// 		operation: ["subtract", "multiply", "add"],-->
-<!--	// 		integer: [7, 3, 5, -2, 10]-->
-<!--	// 		}-->
-<!--	// ];-->
-<!--	// // -&#45;&#45; is this possible?^-->
-<!--	//  var operations 1 = {}-->
-<!--	//-->
-<!--	//-->
-<!--	// function computeOperations(operation) {-->
-<!--	// 	var answer = 0;-->
-<!--	// 	for (var i = 0; i < operation.length; i += 1){-->
-<!--	// 	 answer =+ operation[i].integer[i];-->
-<!--	// 	}-->
-<!--	// 	return answer;-->
-<!--	// };-->
-<!--	// console.log(computeOperations(Operations), "y");-->
-<!--	// console.log(computeOperations[0].integer[0] + " " + computeOperations[0].operation[2]);-->
-<!--	-->
-<!--	-->
-<!--	// {-->
-<!--	// 	operation: 'subtract' (or 'multiply' or 'add'),-->
-<!--	// 	integer: 7 (or any positive or negative integer)-->
-<!--	// }-->
-<!--	//-->
-<!--	// Example 1...-->
-<!--	//-->
-<!--	// var operations1 = [-->
-<!--	//-->
-<!--	// 	{-->
-<!--	// 		operation: 'add',-->
-<!--	// 		integer: 7-->
-<!--	// 	},-->
-<!--	// 	{-->
-<!--	// 		operation: 'add',-->
-<!--	// 		integer: 3-->
-<!--	// 	}-->
-<!--	// ]-->
-<!--	//-->
-<!--	//-->
-<!--	// computeOperations(operations1, 10) // returns 20-->
-<!--	//-->
-<!--	//-->
-<!--	// Example 2...-->
-<!--	//-->
-<!--	// var operations2 = [-->
-<!--	//-->
-<!--	// 	{-->
-<!--	// 		operation: 'add',-->
-<!--	// 		integer: 7-->
-<!--	// 	},-->
-<!--	// 	{-->
-<!--	// 		operation: 'add',-->
-<!--	// 		integer: 3-->
-<!--	// 	},-->
-<!--	// 	{-->
-<!--	// 		operation: 'multiply',-->
-<!--	// 		integer: 3-->
-<!--	// 	},-->
-<!--	// ]-->
-<!--	//-->
-<!--	// computeOperations(operations2, 10) // returns 60-->
-<!--	//-->
-<!--	//-->
-<!--	// Example 3...-->
-<!--	//-->
-<!--	// var operations3 = [-->
-<!--	//-->
-<!--	// 	{-->
-<!--	// 		operation: 'subtract',-->
-<!--	// 		integer: 5-->
-<!--	// 	},-->
-<!--	// 	{-->
-<!--	// 		operation: 'multiply',-->
-<!--	// 		integer: -2-->
-<!--	// 	},-->
-<!--	// 	{-->
-<!--	// 		operation: 'add',-->
-<!--	// 		integer: 10-->
-<!--	// 	},-->
-<!--	// ]-->
-<!--	//-->
-<!--	// computeOperations(operations3, 10) // returns 0-->
-<!--	// //-->
-<!--	// var operationS = [-->
-<!--	// 		{-->
-<!--	// 		operation: ["subtract", "multiply", "add"],-->
-<!--	// 		integer: [7, 3, 5, -2, 10]-->
-<!--	// 		}-->
-<!--	// ];-->
-<!--	// // // -&#45;&#45; is this possible?^-->
-<!--	// function computeOperations(operations, integers){-->
-<!--	// 	var total = integers;-->
-<!--	// 	operations.forEach(function (operator){-->
-<!--	// 		if (operationS.operation === "add"){console.log("add this");}-->
-<!--	// 		else if (operationS.operation === "subtract"){console.log("add this");}-->
-<!--	// 		else if (operationS.operation === "multiply"){console.log("add this");}-->
-<!--	// 		// console.log(operator.integer);-->
-<!--	// 		// console.log(operator.operation);-->
-<!--	// 	});-->
-<!--	// 	return total;-->
-<!--	// }-->
-<!--	//-->
-<!--	// console.log(computeOperations(operationS.operation[], 10));-->
-<!--	-->
-<!--		// for (var i = 0; i < integers.length; i += 1){-->
-<!--		//-->
-<!--		// }-->
-<!--		// if (operations === "add"){-->
-<!--		// }-->
-<!--		// else if (operations === "multiply"){}-->
-<!--		// else if(operations === "subtract"){}-->
-<!--	// }-->
-<!--	-->
-<!--	var operations1 = [-->
-<!--		{-->
-<!--			operation: 'add',-->
-<!--			integer: 7-->
-<!--		},-->
-<!--		{-->
-<!--			operation: 'add',-->
-<!--			integer: 3-->
-<!--		}-->
-<!--	];-->
-<!--	-->
-<!--	var operations2 = [-->
-<!--		{-->
-<!--			operation: 'add',-->
-<!--			integer: 7-->
-<!--		},-->
-<!--		{-->
-<!--			operation: 'add',-->
-<!--			integer: 3-->
-<!--		},-->
-<!--		{-->
-<!--			operation: 'multiply',-->
-<!--			integer: 3-->
-<!--		},-->
-<!--	];-->
-<!--	-->
-<!--	var operations3 = [-->
-<!--		{-->
-<!--			operation: 'subtract',-->
-<!--			integer: 5-->
-<!--		},-->
-<!--		{-->
-<!--			operation: 'multiply',-->
-<!--			integer: -2-->
-<!--		},-->
-<!--		{-->
-<!--			operation: 'add',-->
-<!--			integer: 10-->
-<!--		}-->
-<!--	]-->
-<!--	-->
-<!--	function computeOperations(operator, startingNum) {-->
-<!--		var total = startingNum;-->
-<!--		for (var i = 0; i < operator.length; i += 1) {-->
-<!--			if (operator[i].operation === 'add') {-->
-<!--				total += operator[i].integer;-->
-<!--			} else if (operator[i].operation === 'subtract') {-->
-<!--				total -= operator[i].integer;-->
-<!--			} else if (operator[i].operation === 'multiply') {-->
-<!--				total *= operator[i].integer;-->
-<!--			}-->
-<!--		}-->
-<!--		return total;-->
-<!--	}-->
-<!--	//it wasn't working before because in the for loop, the [i] is needed.-->
-<!--	-->
-<!--	console.log(computeOperations(operations1, 10), 20);-->
-<!--	console.log(computeOperations(operations2, 10), 60);-->
-<!--	console.log(computeOperations(operations3, 10), 0);-->
-<!--		// // create a total variable that we'll change with each iteration of loop-->
-<!--		// var total = 0;-->
-<!--		//-->
-<!--		// // loop through each operation and console log each number-->
-<!--		// operators.forEach(function(operator) {-->
-<!--		// 	if (operator.operation === 'add') {-->
-<!--		// 		total += operator.integer;-->
-<!--		// 	} else if (operator.operation === 'subtract') {-->
-<!--		// 		total -= operator.integer;-->
-<!--		// 	} else if (operator.operation === 'multiply') {-->
-<!--		// 		total *= operator.integer;-->
-<!--		// 	}-->
-<!--		// 	// console.log(operator.integer);-->
-<!--		// 	// console.log(operator.operation);-->
-<!--		// });-->
-<!--		// // based on the operation value, we can add/subtract/multiple the current integer to the total variable-->
-<!--		// // return total variable-->
-<!--		// return total;-->
-<!--	// }-->
-<!--	-->
-<!--	-->
-<!--</script>-->
-<!--</body>-->
-<!--</html>-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>JS Warmups</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
+<script src="js/js-warmups.js"></script>
+<script>
+	
+	// //make the browser ask a question and return the message based on the answer.
+	//
+	//
+	// function amIcoding(answer){
+	// 	var coding = "yes"
+	// 	if (answer !== coding || answer === true) return "I'm not learning ):";
+	// 	else return "I'm learning.";
+	// }
+	// ================================= JS WARM UP
+	//
+	// Consider the following array of users:
+	//
+	// 		var users = [
+	// 			{
+	// 				username: 'fsmith',
+	// 				email: 'fsmith@email.com',
+	// 				numberOfLogins: 23
+	// 			},
+	// 			{
+	// 				username: 'ksmith',
+	// 				email: 'ksmith@email.com',
+	// 				numberOfLogins: 100
+	// 			},
+	// 			{
+	// 				username: 'lsmith',
+	// 				email: 'lsmith@email.com',
+	// 				numberOfLogins: 10
+	// 			}
+	// 		];
+	//
+	// 1. Create a function, returnFirstUser, that takes in an array of user objects and returns the first user object.
+	//
+	// function returnFirstUser() {
+	// 	for (var i = 0; i < 1; i++) {
+	// 		console.log(users[i]); // this is wrong because it doesn not RETURN the first user, it logs.
+	// 		console.log("-----");
+	// 	}
+	// }
+	// returnFirstUser();
+	// console.log(returnFirstUser());
+	//
+	// // instructor:
+	// // return users[0];
+	
+	
+	// returnFirstUser(users) should return...
+	//
+	// {
+	// 	username: 'fsmith',
+	// 			email: 'fsmith@email.com',
+	// 		numberOfLogins: 23
+	// }
+	//
+	// 2. Create a function, returnTotalUserLogins, that takes in an array of user objects and returns the total count of logins
+	// for all users.
+	//when a functions returns nothing it returns undefined.
+	// function returnTotalUserLogins(){
+	// 	var total = 0; /**it should be out of the forloop**/
+	// 	for (var i = 0; i < users.length; i += 1){
+	// 		// var total = 0; when i left it in here, it only showed me 10, the last object
+	// 		total += users[i].numberOfLogins;
+	// 	}
+	// 	//users.forEach(function(user){
+	// 	// total += user.numberOfLogins;
+	// 	// return total; }); ---foreachloop
+	// }
+	// console.log(returnTotalUserLogins(users));
+	
+	// function returnTotalUserLogins(){
+	//
+	// 	for (var i = 0; i < users.length; i++){
+	// 		var sum = 0; /**should be out of the forloop**/
+	// 		// console.log(users[i].numberOfLogins);
+	// 		var sum =+ parseFloat(users[i].numberOfLogins);
+	// 	}
+	// 	return sum;
+	// }
+	
+	// console.log(returnTotalUserLogins(users));
+	//
+	// returnTotalUserLogins(users) should return... 133
+	//
+	// 3. (optional bonus) create a function, returnMostFrequentUser, that takes in an array of user objects and returns the
+	// user object with the highest number of logins.
+	// //
+	// function returnMostFrequentUser(users) {
+	// 	var mostFrequentUser = user {};
+	// users.forEach(function (user) {
+	// 	if (user.numberOfLogins > mostFrequentUser.numberOfLogins) {
+	// 		mostFrequentUser = user;
+	// 	}
+	// 	});
+	// return mostFrequentUser;
+	// }
+	//review later^^^
+	//
+	// returnMostFrequentUser(users) should return...
+	//
+	// {
+	// 	username: 'ksmith',
+	// 			email: 'ksmith@email.com',
+	// 		numberOfLogins: 100
+	// }
+	
+	// ================================= WARM UP
+	//
+	// Create a function, computeOperations, that takes in an array of operation objects and a starting integer value and returns an integer after all the calculations have completed, using the second integer argument as the first operand. Each operation object will have the following shape:
+	//
+	// var Operations = [
+	// 		{
+	// 		operation: ["subtract", "multiply", "add"],
+	// 		integer: [7, 3, 5, -2, 10]
+	// 		}
+	// ];
+	// // --- is this possible?^
+	//  var operations 1 = {}
+	//
+	//
+	// function computeOperations(operation) {
+	// 	var answer = 0;
+	// 	for (var i = 0; i < operation.length; i += 1){
+	// 	 answer =+ operation[i].integer[i];
+	// 	}
+	// 	return answer;
+	// };
+	// console.log(computeOperations(Operations), "y");
+	// console.log(computeOperations[0].integer[0] + " " + computeOperations[0].operation[2]);
+	
+	
+	// {
+	// 	operation: 'subtract' (or 'multiply' or 'add'),
+	// 	integer: 7 (or any positive or negative integer)
+	// }
+	//
+	// Example 1...
+	//
+	// var operations1 = [
+	//
+	// 	{
+	// 		operation: 'add',
+	// 		integer: 7
+	// 	},
+	// 	{
+	// 		operation: 'add',
+	// 		integer: 3
+	// 	}
+	// ]
+	//
+	//
+	// computeOperations(operations1, 10) // returns 20
+	//
+	//
+	// Example 2...
+	//
+	// var operations2 = [
+	//
+	// 	{
+	// 		operation: 'add',
+	// 		integer: 7
+	// 	},
+	// 	{
+	// 		operation: 'add',
+	// 		integer: 3
+	// 	},
+	// 	{
+	// 		operation: 'multiply',
+	// 		integer: 3
+	// 	},
+	// ]
+	//
+	// computeOperations(operations2, 10) // returns 60
+	//
+	//
+	// Example 3...
+	//
+	// var operations3 = [
+	//
+	// 	{
+	// 		operation: 'subtract',
+	// 		integer: 5
+	// 	},
+	// 	{
+	// 		operation: 'multiply',
+	// 		integer: -2
+	// 	},
+	// 	{
+	// 		operation: 'add',
+	// 		integer: 10
+	// 	},
+	// ]
+	//
+	// computeOperations(operations3, 10) // returns 0
+	// //
+	// var operationS = [
+	// 		{
+	// 		operation: ["subtract", "multiply", "add"],
+	// 		integer: [7, 3, 5, -2, 10]
+	// 		}
+	// ];
+	// // // --- is this possible?^
+	// function computeOperations(operations, integers){
+	// 	var total = integers;
+	// 	operations.forEach(function (operator){
+	// 		if (operationS.operation === "add"){console.log("add this");}
+	// 		else if (operationS.operation === "subtract"){console.log("add this");}
+	// 		else if (operationS.operation === "multiply"){console.log("add this");}
+	// 		// console.log(operator.integer);
+	// 		// console.log(operator.operation);
+	// 	});
+	// 	return total;
+	// }
+	//
+	// console.log(computeOperations(operationS.operation[], 10));
+	
+		// for (var i = 0; i < integers.length; i += 1){
+		//
+		// }
+		// if (operations === "add"){
+		// }
+		// else if (operations === "multiply"){}
+		// else if(operations === "subtract"){}
+	// }
+	
+	// var operations1 = [
+	// 	{
+	// 		operation: 'add',
+	// 		integer: 7
+	// 	},
+	// 	{
+	// 		operation: 'add',
+	// 		integer: 3
+	// 	}
+	// ];
+	//
+	// var operations2 = [
+	// 	{
+	// 		operation: 'add',
+	// 		integer: 7
+	// 	},
+	// 	{
+	// 		operation: 'add',
+	// 		integer: 3
+	// 	},
+	// 	{
+	// 		operation: 'multiply',
+	// 		integer: 3
+	// 	},
+	// ];
+	//
+	// var operations3 = [
+	// 	{
+	// 		operation: 'subtract',
+	// 		integer: 5
+	// 	},
+	// 	{
+	// 		operation: 'multiply',
+	// 		integer: -2
+	// 	},
+	// 	{
+	// 		operation: 'add',
+	// 		integer: 10
+	// 	}
+	// ]
+	
+	// function computeOperations(operator, startingNum) {
+	// 	var total = startingNum;
+	// 	for (var i = 0; i < operator.length; i += 1) {
+	// 		if (operator[i].operation === 'add') {
+	// 			total += operator[i].integer;
+	// 		} else if (operator[i].operation === 'subtract') {
+	// 			total -= operator[i].integer;
+	// 		} else if (operator[i].operation === 'multiply') {
+	// 			total *= operator[i].integer;
+	// 		}
+	// 	}
+	// 	return total;
+	// }
+	// //it wasn't working before because in the for loop, the [i] is needed.
+	//
+	// console.log(computeOperations(operations1, 10), 20);
+	// console.log(computeOperations(operations2, 10), 60);
+	// console.log(computeOperations(operations3, 10), 0);
+		// // create a total variable that we'll change with each iteration of loop
+		// var total = 0;
+		//
+		// // loop through each operation and console log each number
+		// operators.forEach(function(operator) {
+		// 	if (operator.operation === 'add') {
+		// 		total += operator.integer;
+		// 	} else if (operator.operation === 'subtract') {
+		// 		total -= operator.integer;
+		// 	} else if (operator.operation === 'multiply') {
+		// 		total *= operator.integer;
+		// 	}
+		// 	// console.log(operator.integer);
+		// 	// console.log(operator.operation);
+		// });
+		// // based on the operation value, we can add/subtract/multiple the current integer to the total variable
+		// // return total variable
+		// return total;
+	// }
+	
+	var nums1 = [1, 2, 3, 4, 5];
+	var nums2 = [2, 2, 3, 4, 5];
+	var nums3 = [10, 0, -5, 4, 5];
+	var nums4 = [2, 2, -5, 2, 2];
+	var nums5 = [2, 2, 2, 2, 2];
+	
+	function addTwos(arrays) {
+		var num = 0;
+		for (var i = 0; i < arrays.length; i++) {
+		if (arrays[i] === 2) {
+			num += arrays[i];
+		}
+		return num;
+		}
+	}
+	console.log(addTwos(nums1)); // returns 2
+	console.log(addTwos(nums2)); // returns 4
+	console.log(addTwos(nums3)); // returns 0
+	console.log(addTwos(nums4)); // returns 8
+	console.log(addTwos(nums5)); // returns 10
+</script>
+</body>
+</html>
