--- a/ajax-store.html
+++ b/ajax-store.html
@@ -7,10 +7,10 @@
 <body>
 
 <nav class="navbar navbar-dark bg-dark text-light">
-<h1 class="m-auto">Tool Time</h1>
+<h1 class="m-auto font-monospace">Tool Depot</h1>
 </nav>
 <div class="table-responsive">
-<table id="products" class="table table-primary table-striped table-bordered">
+<table id="products" class="table table-primary table-striped table-bordered w-50 m-auto mt-5">
     <thead>
         <tr class="table-primary">
             <th scope="col">Title</th>
