--- a/ajax-store.html
+++ b/ajax-store.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Online Store</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
@@ -32,7 +33,7 @@
     // TODO: Create an AJAX GET request for the file under data/inventory.json
 	$.get('data/inventory.json').done(function (toolOrders){
 		var aStart = "";
-		for (var i = 0; i < toolOrders.length; i++)
+		for (var i = 0; i < toolOrders.length; i++){
 		console.log(
 				aStart +=
 						'        <tr class="table-light">\n' +
@@ -41,7 +42,7 @@
 						'            <td>' + toolOrders[i].price + '</td>\n' +
 						'            <td>' + toolOrders[i].categories + '</td>\n' +
 						'        </tr>\n'
-		);
+		);};
 		$('#insertProducts').html(aStart);
 	});
 
