--- a/js-warmups.html
+++ b/js-warmups.html
@@ -320,6 +320,21 @@
 	var nums4 = [2, 2, -5, 2, 2];
 	var nums5 = [2, 2, 2, 2, 2];
 	
+	function multiplyTwos(item){
+			var item1 = 0;
+		item.forEach(function(item){
+			if (item !==2) {
+				return 0;
+			} else item1 *= item;
+		});
+		return item1;
+	};
+	console.log(multiplyTwos(nums1)); // returns 2
+	console.log(multiplyTwos(nums2)); // returns 4
+	console.log(multiplyTwos(nums3)); // returns 0
+	console.log(multiplyTwos(nums4)); // returns 8
+	console.log(multiplyTwos(nums5), '--first ends here-'); // returns 10
+	
 	function addTwos(item, index, array) {
 		var sum = 0;
 		item.forEach(function (item) {
@@ -335,7 +350,35 @@
 	console.log(addTwos(nums2)); // returns 4
 	console.log(addTwos(nums3)); // returns 0
 	console.log(addTwos(nums4)); // returns 8
-	console.log(addTwos(nums5)); // returns 10
+	console.log(addTwos(nums5), '----------'); // returns 10
+	
+	// ================================= WARM UP
+	//
+	// Write a function, returnStringObject, that takes in a string and returns an object with information about the string. The object should have properties for stringValue and stringArray.
+	//
+	// 		Examples...
+	//
+	// returnStringObject('hello') // returns...
+	//
+	// {
+	// 	stringValue: 'hello',
+	// 			stringArray: ['h', 'e', 'l', 'l', 'o']
+	// }
+	//
+	// returnStringObject('codeup') // returns...
+	//
+	// {
+	// 	stringValue: 'codeup',
+	// 			stringArray: ['c', 'o', 'd', 'e', 'u', 'p']
+	// }
+	
+	function returnStringObject(anyString){
+		if (anyString !== anyString.toString()) return "please return a string";
+		else return  anyString.valueOf() + " " + anyString.split("") + " ";
+	}
+	console.log(returnStringObject("codeup"));
+	console.log(returnStringObject(0));
+	console.log(returnStringObject(NaN));
 </script>
 </body>
 </html>
