--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -3,10 +3,32 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 <div id="posts">
 
 </div>
+
+
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script>
+$(document).ready(function(){
+	"use strict";
+	
+	
+		$.get('data/blog.json').done(function(blogPosts){
+			var post = "";
+			for (var i = 0; i < blogPosts.length; i++){
+			console.log(blogPosts[i].title);
+			}
+		});
+	
+	
+});
+</script>
 </body>
 </html>
