--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -7,9 +7,9 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<div id="posts">
+<section id="posts" class="container m-auto d-flex flex-column align-items-center">
 
-</div>
+</section>
 
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -23,8 +23,17 @@ $(document).ready(function(){
 		$.get('data/blog.json').done(function(blogPosts){
 			var post = "";
 			for (var i = 0; i < blogPosts.length; i++){
-			console.log(blogPosts[i].title);
+				console.log(
+						post +=
+								'<h1 class="col-12">' +'Title: ' + blogPosts[i].title + '</h1>' +
+								'<article class="col-12"><h2>' +'Content: '+ '</h2>' + blogPosts[i].content +
+								'</article>' +
+								'<details class="d-flex col-12 align-self-end mb-5">' + blogPosts[i].categories +
+								'<br>'
+								+ blogPosts[i].date + '</details>'
+				);
 			}
+			$('#posts').html(post);
 		});
 	
 	
