--- a/ajax-store.html
+++ b/ajax-store.html
@@ -3,15 +3,17 @@
 <head>
     <title>Online Store</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
 <nav class="navbar navbar-dark bg-dark text-light">
-<h1 class="m-auto font-monospace">Tool Depot</h1>
+<!--	bootstrap icon ref : https://www.tutorialrepublic.com/bootstrap-icons-classes.php-->
+	<h1 class="m-auto font-monospace"><i class="bi-tools"></i> Tool Depot</h1>
 </nav>
 <div class="table-responsive">
-<table id="products" class="table table-primary table-striped table-bordered w-50 m-auto mt-5">
+<table id="products" class="table table-primary table-striped table-bordered w-50 m-auto mt-5 table-hover">
     <thead>
         <tr class="table-primary">
             <th scope="col">Title</th>
@@ -22,6 +24,7 @@
     </thead>
     <tbody id="insertProducts"></tbody>
 </table>
+	<button id="getNewInfo" class="m-auto mt-2 d-flex align-items-center font-monospace">Refresh</button>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -40,10 +43,14 @@
 						'            <td>' + toolOrders[i].title +'</td>\n' +
 						'            <td>' + toolOrders[i].quantity + '</td>\n' +
 						'            <td>' + toolOrders[i].price + '</td>\n' +
-						'            <td>' + toolOrders[i].categories + '</td>\n' +
+						'            <td>' + toolOrders[i].categories.join (", ") + '</td>\n' +
 						'        </tr>\n'
 		);};
 		$('#insertProducts').html(aStart);
+		$('#getNewInfo').click(function(){
+			//unsure of what to add here
+			
+		})
 	});
 
     // TODO: Take the data from inventory.json and append it to the products table
