--- a/mapbox-4.html
+++ b/mapbox-4.html
@@ -23,9 +23,13 @@
 
 
 <!--
-	Mini - Exercise 3
-	
-	Create an HTML file called mapbox-3.html and copy your code over from mapbox-2. Add a popup to the Lincoln Memorial marker that contains the text "Lincoln Memorial"
+
+Mini - Exercise 4 (before final exercise)
+
+Create an HTML file called mapbox-4.html centered on San Antonio that programmatically is re-centered over Zion National Park using the coordinates of the park by geocoding the physical address.
+
+Add the latitude and longitude of Honolulu, Hawaii and use reverse geocoding to move the map to this location by geocoding inside of the reverseGeocode function.
+
 -->
 <section id='map' class="card m-auto mt-5"></section>
 <!--map script src-->
@@ -56,7 +60,7 @@
 	geocode("Tacos La Cabaña, Texas", MAPBOX_API_TOKEN).then(function(data){
 		console.log(data);
 	});
-	
+
 </script>
 </body>
 </html>
