--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -2,48 +2,55 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-<!--	mobile view-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Second Map</title>
-<!--	bootstrap icons-->
+	<title>First Map</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-<!--	bootstrap5-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<!--	map stylesheet-->
 	<link href='https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css' rel='stylesheet' />
-<!--	css style-->
-<style>
-	#map {
-		width: 400px;
-		height: 300px;
-	}
-</style>
+	<style>
+		#map {
+			width: 400px;
+			height: 300px;
+			border: solid .1em rebeccapurple;
+		}
+		.purpleh2{
+			background-color: rebeccapurple;
+		}
+		
+	</style>
+
 </head>
 <body>
-
-
-	<!--
-	Mini - Exercise 2
-	Create an HTML file called mapbox-2.html
-	In this file, create a Mapbox map that shows Washington D.C. and places a marker on the Lincoln Memorial.
-	Bonus: when the marker is dragged and released, display the coordinates in an h1
-	-->
-
+<h2 class="purpleh2 container text-center font-monospace text-light w-50">Go to 'Tacos La Cabaña' for some
+	bomb
+	tacos <i class="bi bi-suit-heart"></i>
+	(:</h2>
 <section id='map' class="card m-auto mt-5"></section>
-<!--map script src-->
+
 <script src='https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js'></script>
 <script src="js/keys.js"></script>
-<!-- JS -->
+<!--keep script underneath/after srcs js/keys.js-->
 <script>
 	"use strict";
-	
+	var accessToken = MAPBOX_API_TOKEN;
 	mapboxgl.accessToken = MAPBOX_API_TOKEN;
 	var map = new mapboxgl.Map({
 		container: 'map', // container ID
 		style: 'mapbox://styles/mapbox/streets-v11', // style URL
-		center: [-77.050636, 38.889248], // starting position [lng, lat]
+		center: [-98.673518, 29.303889], // starting position [lng, lat]
 		zoom: 15// starting zoom
 	});
+	
+	var marker = new mapboxgl.Marker({
+				color: 'mediumpurple',
+				draggable: true
+			})  .setLngLat([-98.6735189, 29.3038893])
+				.addTo(map);
+	marker.on("click", function(){
+		new mapboxgl.Popup();
+	})
+	
+	
 </script>
 </body>
 </html>
