Javascript problem practice

--- a/studying-for-exam-problems.html
+++ b/studying-for-exam-problems.html
@@ -781,14 +781,59 @@
 	// // Exercise 41
 	// // Write a function definition named areaOfCircle that takes in a number representing a circle's radius and returns the area of the circle
 	//
-	// function areaOfCircle(){
-	//
+	// function areaOfCircle(r){
+	// 	var area= Math.PI * r * r;
+	// 	return area;
 	// }
 	//
 	// assert(areaOfCircle(3), 28.274333882308138, "Exercise 41");
 	// assert(areaOfCircle(5), 78.53981633974483, "Exercise 41");
 	// assert(areaOfCircle(7), 153.93804002589985, "Exercise 41");
 	// addToDone("Exercise 41 is correct.")
+	//
+	//
+	// // Exercise 42
+	// // Write a function definition named circumference that takes in a number representing a circle's radius and returns the circumference.
+	// function circumference(r){
+	// 	return r * 2 * Math.PI;
+	// }
+	// assert(circumference(3), 18.84955592153876, "Exercise 42");
+	// assert(circumference(5), 31.41592653589793, "Exercise 42");
+	// assert(circumference(7), 43.982297150257104, "Exercise 42");
+	// addToDone("Exercise 42 is correct.")
+	//
+	//
+	// // In earlier exercises, the solution was to use a logical AND.
+	// // In some of the future exercises, the solution will be to use a logical OR.
+	// // The following two example functions are examples that provide a hint on how to as
+	//
+	// // Example function where the function returns true if the input is one OR two.
+	// function isOneOrTwo(x) {
+	// 	return x == 1 || x == 2
+	// }
+	//
+	// // Example function where the input is one of 3 possibilities
+	// function isOneOrTwoOrThree(x) {
+	// 	return x == 1 || x == 2 || x == 3
+	// }
+	//
+	// // Exercise 43
+	// // Review this code carefully https://gist.github.com/ryanorsinger/5627b954d119dabb3d8c44d56b38c354 if you want more guidance on Exercises 43, 44, and 45.
+	// // Write a function definition named isVowel that takes in value and returns true if the value is a, e, i, o, u in upper or lower case.
+	
+	function isVowel(isThisAvowel){
+		var vowels = ['a', 'e', 'i', 'o', 'u'];
+		isThisAvowel = vowels.forEach(function(){
+			if (isThisAvowel) return true;
+			else return false;
+		});
+	}
+	assert(isVowel("a"), true, "Exercise 43");
+	assert(isVowel("U"), true, "Exercise 43");
+	assert(isVowel("banana"), false, "Exercise 43");
+	assert(isVowel("Q"), false, "Exercise 43");
+	assert(isVowel("y"), false, "Exercise 43");
+	addToDone("Exercise 43 is correct.")
 </script>
 <body>
 </body>
